--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"compile": "tsc",
-		"start": "npm run compile && node ./dist/index.js"
+		"start": "npm run compile && node ./dist/index.js",
+		"build": "tsc"
 	},
 	"keywords": [],
 	"author": "",
