--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@apollo/server": "^4.10.5",
 		"axios": "^1.7.2",
+		"dotenv": "^16.4.5",
 		"graphql": "^16.9.0",
 		"morgan": "^1.10.0"
 	},
